--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         box-sizing: content-box;
     }
     body {
+        background-color: rgb(142, 177, 255);
         height: 100vh;
         display: flex;
         flex-direction: row;
@@ -19,9 +20,9 @@
         align-items: center;
     }
     #lightningJS {
-        background-color: rgb(19, 33, 56);
-        width: 500px;
-        height: 500px;
+        background-color: black;
+        width: 100%;
+        height: 100%;
     }
 </style>
 <body>
